Implementacion de la lectura del archivo en la clase TopManager, comprueba si el tiempo de juego es apto para entrar al top